@startuml
class com.example.gutapp.session.AlertSyncManager {
- {static} String TAG
- {static} long PUSH_DEBOUNCE_MS
- {static} AlertSyncManager instance
- Context appCtx
- AlertDBHelper dao
- Handler main
- Runnable pushTask
- Runnable remoteChangeListener
+ {static} AlertSyncManager init(Context)
+ {static} AlertSyncManager get()
+ void setRemoteChangeListener(Runnable)
+ void pullAll()
+ void schedulePush()
+ void flush()
- void pushNow()
+ void onDataReceived(DataType,Object)
+ void onActionRequired(int,Object)
}


class com.example.gutapp.session.background.NetworkService {
- {static} String TAG
- {static} String CHANNEL_ID
- {static} int FG_ID
- ConcurrentHashMap<String,Integer> streamReqIds
+ void onCreate()
+ int onStartCommand(Intent,int,int)
+ void onDestroy()
+ IBinder onBind(Intent)
+ void onDataReceived(DataType,Object)
+ void onActionRequired(int,Object)
+ void requestPriceData(String)
+ void stopPriceData(String)
+ void onAlertTriggered(Alert)
- Notification buildForegroundNotification()
- void showAlertNotification(Alert)
- void createNotificationChannel()
- String findSymbolByReqId(int)
}




com.example.gutapp.session.SessionCallback <|.. com.example.gutapp.session.AlertSyncManager
com.example.gutapp.session.SessionCallback <|.. com.example.gutapp.session.background.NetworkService
com.example.gutapp.session.background.ServiceRequestInterface <|.. com.example.gutapp.session.background.NetworkService
com.example.gutapp.session.background.TriggerListener <|.. com.example.gutapp.session.background.NetworkService
android.app.Service <|-- com.example.gutapp.session.background.NetworkService
@enduml